--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
 author: David Freeman # add your name
-author-img: david-freeman.jpg # add your photo
+author-img: me.jpg # add your photo
 about-author: I am a web developer focusing on front-end development. Always hungry to keep learning. # add description
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
