--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,10 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
-author: David Freeman # add your name
-author-img: ben-t.JPG # add your photo
-about-author: I am a web developer focusing on front-end development. Always hungry to keep learning. # add description
+author: Ben Hall # add your name
+author-img: benface.jpg # add your photo
+about-author: Left an enjoyable career teaching Computer Science and programming in August 2016 and started out in software development.
+              Currently an Expert Software Engineer (Technical Lead on .NET) at the United Kingdom Hydrographic Office in South West England.
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
 social-github: artemsheludko # add your Github handle
