--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ site-twitter: #if your site has a twitter account, enter it here
 author: Ben Hall # add your name
 author-img: benface.jpg # add your photo
 about-author: > 
-  Many years a school teacher 👨‍🎓. Now Expert Software Engineer (Technical Lead on .NET) at the UK Hydrographic Office. 
-  CodeProject MVP 2019. I do yoga.
+  Many years a school teacher 👨‍🎓. Now Expert Software Engineer (Technical Lead on .NET) 🤓 at the UK Hydrographic Office 🚢. 
+  CodeProject MVP 2019-20 🏆. I do yoga 🧘‍♂️.
 social-twitter: benhall_io
 social-github: benbhall # add your Github handle
 social-linkedin: ben-hall-software-engineer
