--- a/_config.yml
+++ b/_config.yml
@@ -34,4 +34,7 @@ plugins:
 paginate: 8
 paginate_path: "/page/:num"
 
+sass:
+  style: compressed
+
 exclude: ["node_modules", "gulpfile.js", "package.json", "yarn.lock"]
