--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ remote_theme: "mmistakes/minimal-mistakes@4.21.0"
 description: ...
 twitter_username: benhall_io
 github_username: benbhall
-minimal_mistakes_skin: air
+minimal_mistakes_skin: dark
 search: true
 logo: "/assets/images/masthead-ff.png"
 
